--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# trainee\n",
     "\n",
-    "> Documentação para onboarding trainee"
+    "> programa trainee"
    ]
   },
   {
@@ -84,13 +84,13 @@
     "Install latest from the GitHub [repository][repo]:\n",
     "\n",
     "```sh\n",
-    "$ pip install git+https://github.com/carolbalbs/trainee.git\n",
+    "$ pip install git+https://github.com/robochicas/trainee.git\n",
     "```\n",
     "\n",
     "or from [conda][conda]\n",
     "\n",
     "```sh\n",
-    "$ conda install -c carolbalbs trainee\n",
+    "$ conda install -c robochicas trainee\n",
     "```\n",
     "\n",
     "or from [pypi][pypi]\n",
@@ -101,10 +101,10 @@
     "```\n",
     "\n",
     "\n",
-    "[repo]: https://github.com/carolbalbs/trainee\n",
-    "[docs]: https://carolbalbs.github.io/trainee/\n",
+    "[repo]: https://github.com/robochicas/trainee\n",
+    "[docs]: https://robochicas.github.io/trainee/\n",
     "[pypi]: https://pypi.org/project/trainee/\n",
-    "[conda]: https://anaconda.org/carolbalbs/trainee"
+    "[conda]: https://anaconda.org/robochicas/trainee"
    ]
   },
   {
@@ -120,10 +120,10 @@
    "source": [
     "Documentation can be found hosted on this GitHub [repository][repo]'s [pages][docs]. Additionally you can find package manager specific guidelines on [conda][conda] and [pypi][pypi] respectively.\n",
     "\n",
-    "[repo]: https://github.com/carolbalbs/trainee\n",
-    "[docs]: https://carolbalbs.github.io/trainee/\n",
+    "[repo]: https://github.com/robochicas/trainee\n",
+    "[docs]: https://robochicas.github.io/trainee/\n",
     "[pypi]: https://pypi.org/project/trainee/\n",
-    "[conda]: https://anaconda.org/carolbalbs/trainee"
+    "[conda]: https://anaconda.org/robochicas/trainee"
    ]
   },
   {
