--- a/aulas/Aula 7.qmd
+++ b/aulas/Aula 7.qmd
@@ -18,9 +18,9 @@ Antes de iniciar o projeto é importante saber que todo componente eletrônico p
 
 A codificação por cores é uma técnica importante para organizar os fios em um circuito, o que torna a montagem e a solução de problemas muito mais fáceis. Embora não existam regras rígidas, algumas convenções são amplamente utilizadas:
 
-*Vermelho*: Geralmente usado para a conexão positiva (+).
-*Preto*: Quase sempre usado para a conexão negativa (-) ou terra (GND).
-*Outras Cores*: Utilizadas para os diferentes pinos de sinal, ajudando a distingui-los.
+- **Vermelho**: Geralmente usado para a conexão positiva (+).
+- **Preto**: Quase sempre usado para a conexão negativa (-) ou terra (GND).
+- **Outras Cores**: Utilizadas para os diferentes pinos de sinal, ajudando a distingui-los.
 
 ## Conhecendo o Tinkercad 
 
@@ -32,3 +32,4 @@ O Tinkercad é uma plataforma online e gratuita para modelagem 3D, eletrônica e
 Vamos montar um circuito simples, utilizando led e resistores.
 
 <iframe width="514" height="289" src="https://www.youtube-nocookie.com/embed/vpPYtPXC_f4?modestbranding=1" title="Acendendo um LED" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
