--- a/aulas/Aula 14.qmd
+++ b/aulas/Aula 14.qmd
@@ -11,11 +11,11 @@ title: "Modelagem Virtual (CAD / 3D)"
 A modelagem virtual consiste na criação de modelos digitais tridimensionais de robôs ou peças específicas, utilizando softwares de CAD (Desenho Assistido por Computador) e modelagem 3D. Essa etapa é essencial para visualizar, testar e aperfeiçoar o design antes de passar para a fabricação ou impressão 3D.
 
 ## Como desenhar em 2D?
-<iframe width="514" height="289" src="https://youtu.be/MRRKD74pQ2o?si=kIHKj9GDC2TnPhzA" title="Introdução à Modelagem 3D para Robótica" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="514" height="289" src="https://www.youtube.com/embed/MRRKD74pQ2o?si=vDzIzIrR-L4ZYwwl" title="Introdução à Modelagem 3D para Robótica" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Como desenhar em 3D?
 
-<iframe width="514" height="289" src="https://youtu.be/-ltK5ChTNK0?si=5jOYrWvgAM5YSjRA" title="Introdução à Modelagem 3D para Robótica" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="514" height="289" src="https://www.youtube.com/embed/-ltK5ChTNK0?si=tBM42IOPxE6PDYfy" title="Introdução à Modelagem 3D para Robótica" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
